--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script>
-  window.location.href = "https://math218.github.io/some/index
+  window.location.href = "https://math218.github.io/some/index";
 </script>
